feat: update UI elements and add loading overlay for improved user experience

--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top 2000 to Spotify Playlist Converter</title>
+    <title>Top 2000 naar Spotify Afspeellijst</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Top 2000 to Spotify Converter</h1>
+        <h1>Top 2000 naar Spotify</h1>
         <p class="subtitle">
-            Convert your NPO Radio 2 Top 2000 voting list to a Spotify playlist
+            Zet je NPO Radio 2 Top 2000 stemlijst om in een Spotify afspeellijst
         </p>
 
         <div id="config-warning" class="message error-message" style="margin-bottom: 1rem; display: none;">
-            <strong>Configuration Required:</strong> Spotify Client ID is not configured. Please check the README for setup instructions.
+            <strong>Configuratie vereist:</strong> Spotify Client ID is niet geconfigureerd. Bekijk de README voor installatie-instructies.
         </div>
 
         <div id="spotify-connected" class="message success-message" style="margin-bottom: 1rem; display: none;">
-            <strong>✅ Connected to Spotify!</strong> You can now create playlists.
+            <strong>✅ Verbonden met Spotify!</strong> Klaar om je afspeellijst te maken.
+        </div>
+
+        <div id="loading-overlay" class="loading-overlay" style="display: none;">
+            <div class="loading-content">
+                <div class="spinner"></div>
+                <div id="loading-text" class="loading-text">Bezig...</div>
+                <div id="loading-progress" class="loading-progress"></div>
+            </div>
         </div>
 
         <form id="input-form" class="input-form">
@@ -26,11 +34,11 @@
                 <input
                     type="text"
                     id="npo-link-input"
-                    placeholder="Paste your NPO Radio 2 Top 2000 submission link here..."
+                    placeholder="Plak hier je NPO Radio 2 Top 2000 inzending link..."
                     class="link-input"
                 />
-                <button type="submit" id="fetch-button" class="fetch-button">
-                    Fetch Songs
+                <button type="submit" id="start-button" class="fetch-button">
+                    Verbind en Maak Afspeellijst
                 </button>
             </div>
         </form>
@@ -40,25 +48,22 @@
         <div id="success-message" class="message success-message" style="display: none;"></div>
 
         <div id="songs-section" class="songs-section" style="display: none;">
-            <h2>Songs Found (<span id="songs-count">0</span>)</h2>
+            <h2>Gevonden Nummers (<span id="songs-count">0</span>)</h2>
             <div id="songs-list" class="songs-list"></div>
-            <button id="spotify-button" class="spotify-button">
-                Connect to Spotify
-            </button>
         </div>
 
         <div class="instructions">
-            <h3>How to use:</h3>
+            <h3>Hoe te gebruiken:</h3>
             <ol>
-                <li>Go to the NPO Radio 2 Top 2000 voting site and create your list</li>
-                <li>Copy the submission URL (e.g., https://npo.nl/luister/stem/.../inzending/...)</li>
-                <li>Paste the URL above and click "Fetch Songs"</li>
-                <li>Click "Connect to Spotify" to authorize the app</li>
-                <li>Your playlist will be created and opened in Spotify!</li>
+                <li>Ga naar de NPO Radio 2 Top 2000 stem-site en maak je lijst</li>
+                <li>Kopieer de inzending URL (bijv., https://npo.nl/luister/stem/.../inzending/...)</li>
+                <li>Plak de URL hierboven en klik op "Verbind en Maak Afspeellijst"</li>
+                <li>Je wordt automatisch verbonden met Spotify en je afspeellijst wordt aangemaakt!</li>
+                <li>Als de afspeellijst al bestaat, worden nieuwe nummers toegevoegd</li>
             </ol>
             <p class="note">
-                <strong>Note:</strong> You need to configure your Spotify Client ID in the code for this to work.
-                Visit the <a href="https://developer.spotify.com/dashboard" target="_blank" rel="noopener noreferrer">Spotify Developer Dashboard</a> to create an app and get your Client ID.
+                <strong>Let op:</strong> De eerste keer moet je toestemming geven aan Spotify.
+                Bezoek het <a href="https://developer.spotify.com/dashboard" target="_blank" rel="noopener noreferrer">Spotify Developer Dashboard</a> om een app aan te maken en je Client ID te krijgen.
             </p>
         </div>
     </div>
